# NoteBook

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: normalize-icon-alpha.mjs  rebuild-icons.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
src/components/: AppBrand.vue  ListFilterMenu.vue  NoteRichEditor.vue  TrashList.vue
src/constants/: appMeta.ts
src/types/: notebook.ts
src/utils/: listSort.ts  trash.ts
