[package]
name = "notebook"
version = "1.0.0"
description = "Local notebook (Tbook)"
authors = ["you"]
edition = "2021"

[lib]
name = "notebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
dirs = "5"
regex = "1"
